# SequoiaSQL-MySQL

./: .gitignore  CMakeLists.txt  README.md  README_dev.md  build.py  ha_sdb.cc  ha_sdb.h  ha_sdb_part.cc  sdb_alter.cc  sdb_cl.cc  sdb_cl.h  sdb_condition.cc  sdb_condition.h  sdb_conf.cc  sdb_conf.h  sdb_conn.cc  sdb_conn.h  sdb_def.h  sdb_errcode.h  sdb_idx.cc  sdb_idx.h  sdb_item.cc  sdb_item.h  sdb_log.cc  sdb_sql.cc  sdb_sql.h  sdb_thd.cc  sdb_thd.h  sdb_util.cc  sdb_util.h
cmake/: curl.cmake  curses.cmake  gen_version.cmake  odbc.cmake  ssl.cmake
misc/versiontool/: CMakeLists.txt
package/: cmakecpackage.cmake
package/common/: compatible.sh
package/mariadb/: normal_component.xml  sdb_sql_ctl  sequoiamysql_en.lng  sequoiamysql_server.xml  sequoiamysql_zh.lng  sequoiasql-mariadb.systemd  sequoiasql-mariadb.sysv  upgrade_component.xml  version.info
package/mysql/: limits.conf  normal_component.xml  sdb_sql_ctl  sequoiamysql_en.lng  sequoiamysql_server.xml  sequoiamysql_zh.lng  sequoiasql-mysql.systemd  sequoiasql-mysql.sysv  upgrade_component.xml  version.info
sql-src/mariadb-10.4.6/: url.txt
sql-src/mysql-5.7.24/: url.txt
sql-src/mysql-5.7.28/: url.txt
sql-src/mysql-5.7.31/: url.txt
sql-src/mysql-5.7.34/: url.txt
src/: CMakeLists.txt
src/handler/: ha_sdb.cc  ha_sdb_alter.cc  ha_sdb_condition.cc  ha_sdb_conf.cc  ha_sdb_idx.cc  ha_sdb_item.cc  ha_sdb_part.cc  ha_sdb_seq.cc  ha_sdb_sql.cc  ha_sdb_thd.cc  ha_sdb_util.cc
src/include/: ha_sdb.h  ha_sdb_condition.h  ha_sdb_conf.h  ha_sdb_def.h  ha_sdb_errcode.h  ha_sdb_idx.h  ha_sdb_item.h  ha_sdb_log.h  ha_sdb_part.h  ha_sdb_seq.h  ha_sdb_sql.h  ha_sdb_thd.h  ha_sdb_util.h  ha_tool_utils.h  sdb_cl.h  sdb_condition.h  sdb_conn.h  sdb_def.h  sdb_errcode.h  sdb_lock.h  sdb_seq.h  sdb_util.h  server_ha.h  server_ha_def.h  server_ha_recover.h  server_ha_util.h
src/patches/: ha_mariadb_10.4.6.patch  ha_mysql_5.7.24.patch  ha_mysql_5.7.25.patch  ha_mysql_5.7.28.patch  ha_mysql_5.7.31.patch  ha_mysql_5.7.32.patch  mariadb_mysqldump_10.4.6.patch  mroonga_mariadb_10.4.6.patch  mysql_mysqldump.5.7.24.patch  mysql_mysqldump_5.7.25.patch  mysql_mysqldump_5.7.31.patch  mysql_mysqldump_5.7.32.patch
src/sdbwrapper/: sdb_cl.cc  sdb_conn.cc  sdb_idx.cc  sdb_item.cc  sdb_log.cc  sdb_seq.cc  sdb_sql.cc  sdb_thd.cc  sdb_util.cc
src/sequoiadb/: CMakeLists.txt
src/sequoiadb/handler/: ha_sdb.cc  ha_sdb_alter.cc  ha_sdb_condition.cc  ha_sdb_conf.cc  ha_sdb_ctx.cc  ha_sdb_idx.cc  ha_sdb_item.cc  ha_sdb_part.cc  ha_sdb_seq.cc  ha_sdb_sql.cc  ha_sdb_thd.cc  ha_sdb_util.cc
src/sequoiadb/include/: ha_sdb.h  ha_sdb_condition.h  ha_sdb_conf.h  ha_sdb_ctx.h  ha_sdb_def.h  ha_sdb_errcode.h  ha_sdb_idx.h  ha_sdb_item.h  ha_sdb_log.h  ha_sdb_part.h  ha_sdb_seq.h  ha_sdb_share.h  ha_sdb_sql.h  ha_sdb_thd.h  ha_sdb_util.h  ha_tool_utils.h  mapping_context.h  mapping_context_impl.h  name_map.h  sdb_cl.h  sdb_conn.h  sdb_seq.h  server_ha.h  server_ha_def.h  server_ha_util.h
src/sequoiadb/info_schema/: i_s_sdb_session_attr_current.cc
src/sequoiadb/name_map/: mapping_context_impl.cc  name_map.cc
src/sequoiadb/patches/: ha_mariadb_10.4.6.patch  ha_mysql_5.7.25.patch  ha_mysql_5.7.31.patch  ha_mysql_5.7.32.patch  mariadb_mysqldump_10.4.6.patch  mysql_mysqldump_5.7.25.patch  mysql_mysqldump_5.7.28.patch  mysql_mysqldump_5.7.32.patch  seq_mariadb_10.4.6.patch
src/sequoiadb/sdbwrapper/: sdb_cl.cc  sdb_conn.cc
src/sequoiadb/server_ha/: server_ha.cc  server_ha_query.cc  server_ha_recover.cc  server_ha_sql_rewrite.cc  server_ha_util.cc
src/sequoiadb/tools/: ha_inst_group_chpass.cc  ha_inst_group_clear.cc  ha_inst_group_init.cc  ha_inst_group_list.cc  ha_tool_utils.cc
src/server_ha/: server_ha.cc  server_ha_recover.cc  server_ha_util.cc
src/spark/: CMakeLists.txt
src/spark/handler/: ha_spark.cc  ha_spark_log.cc  ha_spark_vars.cc
src/spark/include/: ha_spark.h  ha_spark_log.h  ha_spark_vars.h  spark_conn.h
src/spark/patches/: sql_pushdown_mariadb_10.4.6.patch  sql_pushdown_mysql_5.7.25.patch  sql_pushdown_mysql_5.7.32.patch
src/spark/sparkwrapper/: spark_conn.cc
src/tools/: ha_inst_clear.cc  ha_inst_group_clear.cc  ha_inst_group_init.cc  ha_inst_group_list.cc  ha_tool_utils.cc
testcase/mariadb-10.4.28/include/: common-tests.inc
testcase/mariadb-10.4.28/main/: alter_sequoiadb.result  alter_sequoiadb.test  alter_table.result  alter_table.test  basic_query_sharding_sequoiadb.result  check_constraint.result  compare.result  constraints.result  create.result  create_drop_function.result  create_or_replace.result  create_select.result  create_select.test  cte_nonrecursive.result  cte_nonrecursive.test  cte_nonrecursive_not_embedded.result  cte_nonrecursive_not_embedded.test  custom_aggregate_functions.result  default.result  find_hide_variables_sequoiadb.result  func_gconcat.result  func_group.result  func_hybrid_type.result  func_in.result  func_json.result  func_json.test  func_like.result  func_math.result  func_misc.result  func_misc.test  func_regexp_pcre.result  func_str.result  func_system.result  func_time.result  function_defaults.result  gis.result  group_by.result  having.result  having.test  having_aggr_function_sequoiadb.result  (+68 more)
testcase/mariadb-10.4.6/: mysql-test-run.pl
testcase/mariadb-10.4.6/include/: alter_table_mdev539.inc  count_pushdown_sequoiadb.inc  ctype_datetime.inc  ctype_like_cond_propagation.inc  ctype_numconv.inc  ctype_pad_all_engines.inc  ctype_utf8_ilseq.inc  ctype_utf8mb4.inc  default_mysqld.cnf  function_defaults.inc  (+7 more)
testcase/mysql-5.7.24/: mysql-test-run.pl
testcase/mysql-5.7.25/: mysql-test-run.pl
testcase/mysql-5.7.28/: mysql-test-run.pl
testcase/mysql-5.7.31/: mysql-test-run.pl
testcase/mysql-5.7.34/: CMakeLists.txte  mtr.out-of-source
testcase/testcase-base/: pom.xml
tools/: sdb_change_engine  sdb_doc_generator.py
tools/diagnostic/: sdb_diag_info_dump
tools/metaSync/: README.md  config  config.sample  log.config.sample  meta_sync.py
tools/mysqlDisseminate/: README.md  config  mysqlDisseminate.py
tools/sdbfk/: README.md  sdb_fk_init.sh  sdb_fk_notify.sh
(+1629 files in other folders)
